--- a/burger_resturant/html/cart.html
+++ b/burger_resturant/html/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger Bliss - Cart</title>
-    <link rel="stylesheet" href="/css/cart.css">
+    <link rel="stylesheet" href="../css/cart.css">
 </head>
 <body>
     <header>
